node 16. updated deps

--- a/packages/base-wallet/tsconfig.json
+++ b/packages/base-wallet/tsconfig.json
@@ -6,8 +6,8 @@
         // ],
         "module": "commonjs",
         "moduleResolution": "node",
-        // "sourceMap": true,
-        "inlineSourceMap": true,
+        "sourceMap": true,
+        // "inlineSourceMap": true,
         "strict": true,
         "declaration": true,
         "declarationDir": "types",
