--- a/packages/wallet-protocol-api/.npmignore
+++ b/packages/wallet-protocol-api/.npmignore
@@ -1,9 +1,14 @@
 # Build scripts
 build
 
+# Releases
+release
+
 # Test files
 test
 **/*.spec.ts
+__tests__
+jest*.js
 
 # Logs
 logs
@@ -27,14 +32,13 @@ coverage
 .github
 
 # tsconfig
-tsconfig.json
+tsconfig*.json
 
 # SRC docs
 src/docs
 
 # Test temporal files
 .mocha-ts
-.tsconfig.json
 
-# docs temporal files
-.nojekyll
+# TO-DO
+TO-DO
