--- a/packages/bok-wallet/package.json
+++ b/packages/bok-wallet/package.json
@@ -5,9 +5,9 @@
   "types": "./types/index.d.ts",
   "main": "./dist/index.js",
   "scripts": {
-    "build:ts": "tsc",
+    "build:ts": "tsc --project tsconfig.build.json",
     "build": "run-s build:ts",
-    "build:watch": "tsc -w --preserveWatchOutput --project tsconfig.json",
+    "build:watch": "tsc -w --preserveWatchOutput --project tsconfig.build.json",
     "test": "jest --config=jest.config.js --coverage=false",
     "test:watch": "jest --config=jest.config.js --coverage=false --watch"
   },
@@ -75,17 +75,15 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@jest-runner/electron": "^3.0.1",
     "@types/debug": "^4.1.5",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^29.1.2",
     "@types/lodash": "^4.14.170",
-    "@types/node": "^15.12.2",
+    "@types/node": "^16.11.65",
     "@types/uuid": "^8.3.1",
     "dotenv": "^8.6.0",
-    "electron": "^13.1.1",
-    "jest": "^27.0.4",
+    "jest": "^29.1.2",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.0.0",
     "ts-standard": "^10.0.0",
     "typescript": "^4.4.3"
