scripts unified for better lerna integration

--- a/packages/bok-wallet/package.json
+++ b/packages/bok-wallet/package.json
@@ -99,9 +99,8 @@
     "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
     "mocha-ts:browser": "node build/testing/browser/index.cjs ",
     "mocha-ts:browser-headless": "node build/testing/browser/index.cjs headless ",
-    "preversion": "run-s clean lint build:js coverage test:browser-headless",
+    "preversion": "run-s clean lint build:js",
     "version": "run-s docs git:add",
-    "postversion": "git push --follow-tags",
     "test": "run-s test:node-cjs test:node-esm",
     "test:node-cjs": "npm run mocha-ts:cjs ",
     "test:node-esm": "npm run mocha-ts ",
