--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -54,9 +54,8 @@
     "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
     "mocha-ts:browser": "node build/testing/browser/index.cjs ",
     "mocha-ts:browser-headless": "node build/testing/browser/index.cjs headless ",
-    "preversion": "run-s clean lint build:js coverage test:browser-headless",
+    "preversion": "run-s clean lint build:js",
     "version": "run-s docs git:add",
-    "postversion": "git push --follow-tags",
     "test": "echo \"Warning: You must specify tests for this package\"",
     "test:node-cjs": "npm run mocha-ts:cjs ",
     "test:node-esm": "npm run mocha-ts ",
