--- a/packages/sw-wallet/tsconfig.json
+++ b/packages/sw-wallet/tsconfig.json
@@ -6,6 +6,8 @@
         // ],
         "module": "commonjs",
         "moduleResolution": "node",
+        "allowJs": true,
+        "checkJs": true,
         "sourceMap": true,
         // "inlineSourceMap": true,
         "strict": true,
@@ -22,9 +24,11 @@
         "esModuleInterop": true,
         "noUnusedLocals": true,
         "outDir": "dist",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "skipLibCheck": true,                     /* Skip type checking of declaration files. */
+        "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
     },
     "exclude": [
-        "**/*.template.ts", "types"
+        "**/*.template.ts", "types", "node_modules/**/*"
     ]
 }
