--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
     "mocha-ts:browser": "node build/testing/browser/index.cjs ",
     "mocha-ts:browser-headless": "node build/testing/browser/index.cjs headless ",
-    "preversion": "run-s clean lint build:js coverage test:browser-headless",
     "version": "run-s docs release git:add",
     "postversion": "git push --follow-tags",
     "test": "run-s test:node test:browser-headless",
@@ -89,9 +88,7 @@
     "test:node": "run-s test:node-cjs test:node-esm",
     "test:node-cjs": "npm run mocha-ts:cjs ",
     "test:node-esm": "npm run mocha-ts ",
-    "watch": "npm run mocha-ts:watch ",
-    "release": "npm pack --pack-destination releases/",
-    "postrelease": "rm -f ./releases/i3m-non-repudiation-library-latest.tgz && cp ./releases/i3m-non-repudiation-library-$npm_package_version.tgz ./releases/i3m-non-repudiation-library-latest.tgz"
+    "watch": "npm run mocha-ts:watch "
   },
   "ts-standard": {
     "project": "tsconfig.json",
