Rename init:dev for install:dev for more naming consistency

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "init:dev": "run-s bootstrap build",
+    "install:dev": "run-s bootstrap build",
     "install:libs": "lerna bootstrap --scope=\"@i3m/*\"",
-    "build:libs": "lerna run build --scope=\"@i3m/*\"",
     "install:desktop": "lerna exec --scope \"wallet-desktop\" --no-bail -- npm i",
-    "build:desktop": "lerna run build --scope \"wallet-desktop\" --no-bail",
     "bootstrap": "lerna bootstrap",
+    "build:libs": "lerna run build --scope=\"@i3m/*\"",
+    "build:desktop": "lerna run build --scope \"wallet-desktop\" --no-bail",
     "build": "lerna run build",
     "build:watch": "lerna run --parallel --stream build:watch",
     "clean": "lerna clean",
