--- a/packages/wallet-desktop-openapi/src/schema/dataSharingAgreement.yaml
+++ b/packages/wallet-desktop-openapi/src/schema/dataSharingAgreement.yaml
@@ -12,12 +12,6 @@ paths:
 
 components:
   schemas:
-    Address:
-      title: Ethereum Address
-      type: string
-      pattern: '^0x([0-9A-Fa-f]){40}$'
-      example: '0x71C7656EC7ab88b098defB751B7401B5f6d8976F'
-
     CompactJWS:
       title: CompactJWS
       type: string
@@ -48,9 +42,9 @@ components:
         hashAlg:
           type: string
         ledgerContractAddress:
-          $ref: "#/components/schemas/Address"
+          $ref: "./identity.yaml#/components/schemas/EthereumAddress"
         ledgerSignerAddress:
-          $ref: "#/components/schemas/Address"
+          $ref: "./identity.yaml#/components/schemas/EthereumAddress"
         pooToPorDelay:
           type: integer
         pooToPopDelay:
