List resources improved

--- a/packages/wallet-desktop-openapi/src/paths/resources.yaml
+++ b/packages/wallet-desktop-openapi/src/paths/resources.yaml
@@ -7,11 +7,27 @@ info:
 paths:
   /resources:
     get:
-      summary: List all resources
+      summary:
+        Lists the resources that match the filter specified in the query parameters.
       operationId: resourceList
       x-eov-operation-handler: resources
       tags:
         - resources
+      parameters:
+        - in: query
+          name: type
+          example: Contract
+          schema:
+            $ref:  "#/components/schemas/ResourceType"
+          description: Filter the resources by resource type.
+        - in: query
+          name: identity
+          example: ''
+          allowEmptyValue: true
+          schema:
+            $ref: "../schema/identity.yaml#/components/schemas/did"
+          description: 
+            Filter the resource associated to an identity DID. Send empty value to get all the resources that are not associated to any identity.
       responses:
         "200":
           description: A paged array of resources. Only the props requested will be returned. Security policies may prevent some props from being returned.
@@ -59,7 +75,8 @@ components:
       description: A list of resources
       type: array
       items:
-        $ref: "#/components/schemas/ResourceId"
+        $ref: "#/components/schemas/Resource"
+        # $ref: "#/components/schemas/ResourceId"
         # allOf:
         #   - $ref: "#/components/schemas/ResourceId"
         #   - $ref: "#/components/schemas/Resource"
@@ -77,6 +94,7 @@ components:
       properties:
         type:
           $ref:  "#/components/schemas/ResourceType"
+          example: VerifiableCredential
           enum:
             - VerifiableCredential
         identity:
@@ -145,6 +163,7 @@ components:
       properties:
         type:
           $ref:  "#/components/schemas/ResourceType"
+          example: Object
           enum:
             - Object
         identity:
@@ -161,7 +180,9 @@ components:
       type: object
       properties:
         type:
+          type: string
           $ref:  "#/components/schemas/ResourceType"
+          example: Contract
           enum:
             - Contract
         identity:
