data sharing agreeement validation logic (test missing)

--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -49,6 +49,8 @@
     "docs": "node build/build.docs.cjs",
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
+    "lint:src": "ts-standard --fix 'src/**/!(*.spec).ts'",
+    "lint:test": "ts-standard --fix '{test/**/*,src/**/*.spec.ts}'",
     "mocha-ts": "node --experimental-modules --es-module-specifier-resolution=node ./build/bin/mocha-ts.cjs ",
     "mocha-ts:cjs": "node ./build/bin/mocha-ts.cjs --commonjs ",
     "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
@@ -106,7 +108,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.57.0",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-standard": "^12.0.1",
+    "ts-standard": "^11.0.0",
     "tslib": "^2.3.1",
     "typedoc": "^0.23.0",
     "typedoc-plugin-markdown": "^3.11.0",
@@ -128,6 +130,7 @@
     "did-resolver": "^3.1.0",
     "ethers": "^5.1.4",
     "ethr-did-resolver": "^4.3.3",
+    "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
     "object-sha": "^2.0.7",
     "uuid": "^8.3.2",
