--- a/packages/wallet-desktop-openapi/package.json
+++ b/packages/wallet-desktop-openapi/package.json
@@ -7,7 +7,8 @@
     ".": "./openapi.json",
     "./types": "./types/index.d.ts",
     "./openapi.yaml": "./openapi.yaml",
-    "./openapi.json": "./openapi.json"
+    "./openapi.json": "./openapi.json",
+    "./openapi.dereferenced.json": "./openapi_dereferenced.json"
   },
   "directories": {
     "types": "./types",
