--- a/packages/server-wallet/package.json
+++ b/packages/server-wallet/package.json
@@ -56,7 +56,7 @@
     "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
     "mocha-ts:browser": "node build/testing/browser/index.cjs ",
     "mocha-ts:browser-headless": "node build/testing/browser/index.cjs headless ",
-    "version": "node build/build.docs.cjs && git add -A ",
+    "version": "node build/build.docs.cjs",
     "test": "run-s test:node-cjs test:node-esm",
     "test:node-cjs": "npm run mocha-ts:cjs ",
     "test:node-esm": "npm run mocha-ts ",
