--- a/packages/wallet-protocol/package.json
+++ b/packages/wallet-protocol/package.json
@@ -59,9 +59,7 @@
     "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
     "mocha-ts:browser": "node build/testing/browser/index.cjs ",
     "mocha-ts:browser-headless": "node build/testing/browser/index.cjs headless ",
-    "preversion": "run-s clean lint build:js coverage test:browser-headless",
-    "version": "run-s docs git:add",
-    "postversion": "git push --follow-tags",
+    "version": "npm run docs",
     "test": "run-s test:node",
     "test:browser": "npm run mocha-ts:browser",
     "test:browser-headless": "npm run mocha-ts:browser-headless",
