--- a/.github/workflows/packingMac.yml
+++ b/.github/workflows/packingMac.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       
       - name: Install root dependecies
         run: npm ci
