Update env variables

--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,6 @@
 
-NEXUS_USER=
-NEXUS_PASSWD=
+# To start the wallet desktop in development mode:
+# NODE_ENV=development
 
-NEXUS_HOST=
+# Variable to print debug console logs.
+# DEBUG=@i3m/*
