fixed bug with did regex

--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,5 @@
-
 # To start the wallet desktop in development mode:
-# NODE_ENV=development
+NODE_ENV=development
 
 # Variable to print debug console logs.
-# DEBUG=@i3m/*
+DEBUG=@i3m/*
