--- a/packages/wallet-desktop/tsconfig.json
+++ b/packages/wallet-desktop/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "ESNext",
         // "lib": [
         //     "ES2020"
         // ],
@@ -18,6 +18,7 @@
         // "alwaysStrict": true, /* Parse in strict mode and emit "use strict" for each source file. */
         "allowJs": true,
         "esModuleInterop": true,
+        "skipLibCheck": true,
         "noUnusedLocals": true,
         "outDir": "dist",
         "resolveJsonModule": true,
