--- a/.github/workflows/packingMac.yml
+++ b/.github/workflows/packingMac.yml
@@ -22,7 +22,10 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '2.7'
+          python-version: '2.7.18'
+
+      - name: Select python
+        run: asdf shell python 2.7.18
       
       - name: Install root dependecies
         run: npm ci
