--- a/.github/workflows/packingMac.yml
+++ b/.github/workflows/packingMac.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-10.15]
 
     steps:
       - name: Check out Git repository
@@ -20,13 +20,6 @@ jobs:
         with:
           node-version: 16
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '2.7.18'
-
-      - name: Select python
-        run: asdf shell python 2.7.18
-      
       - name: Install root dependecies
         run: npm ci
 
