--- a/packages/wallet-protocol-api/package.json
+++ b/packages/wallet-protocol-api/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@i3m/wallet-protocol-api",
   "version": "1.5.3",
-  "description": "Wallet protocol API",
+  "description": "This library can be used to connect connect to an i3m Wallet (through its API)",
   "keywords": [
     "i3-market",
-    "wallet"
+    "wallet",
+    "i3-wallet"
   ],
   "license": "EUPL-1.2",
   "author": {
     "name": "Fernando Roman-Garcia",
     "email": "fernando.roman@upc.edu"
   },
-  "repository": "repoprovider:username/my-package-name",
+  "repository": "github:i3-Market-V2-Public-Repository/SP3-SCGBSSW-I3mWalletMonorepo",
+  "type": "module",
   "types": "./types/index.d.ts",
   "main": "./dist/cjs/index.node.cjs",
   "browser": "./dist/esm/index.browser.js",
@@ -20,7 +22,8 @@
     ".": {
       "node": {
         "require": "./dist/cjs/index.node.cjs",
-        "import": "./dist/esm/index.node.js"
+        "import": "./dist/esm/index.node.js",
+        "module": "./dist/esm/index.node.js"
       },
       "default": "./dist/esm/index.browser.js"
     },
@@ -29,31 +32,47 @@
     "./umd-browser-bundle": "./dist/bundles/umd.js",
     "./types": "./types/index.d.ts"
   },
+  "imports": {
+    "#pkg": {
+      "import": "./dist/esm/index.node.js",
+      "require": "./dist/cjs/index.node.cjs"
+    }
+  },
   "directories": {
     "build": "./build",
     "dist": "./dist",
     "docs": "./docs",
     "src": "./src",
-    "test": "./test"
+    "test": "./test",
+    "benchmark": "./benchmark",
+    "mocha-ts": "./.mocha-ts"
   },
   "scripts": {
-    "build": "run-s build:js lint docs",
+    "build": "run-s lint:src build:js lint:test docs",
     "build:js": "rollup -c build/rollup.config.js",
-    "clean": "rimraf .nyc_output .mocha-ts coverage dist types docs",
-    "coverage": "nyc --check-coverage --exclude build --exclude '{src/ts/**/*.spec.ts,test/**/*.ts,.mocha-ts/**/*}' --reporter=text --reporter=lcov node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js '{src/ts/**/*.spec.ts,test/**/*.ts}'",
-    "docs": "node build/build.docs.js",
+    "clean": "rimraf .mocha-ts coverage dist types docs",
+    "coverage": "c8 --clean --check-coverage --exclude '{src/ts/**/*.spec.ts,test,test-vectors,build}' --exclude-after-remap --reporter=text --reporter=lcov node ./build/bin/mocha-ts.cjs --commonjs ",
+    "docs": "node build/build.docs.cjs",
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
-    "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "version:old": "run-s build git:add",
-    "postversion:old": "git push --follow-tags",
-    "test:interactive": "run-s test:browser-headless test:node",
-    "test:browser": "node build/testing/browser/index.js",
-    "test:browser-headless": "node build/testing/browser/index.js headless",
-    "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
-    "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'"
+    "lint:src": "ts-standard --fix 'src/**/!(*.spec).ts'",
+    "lint:test": "ts-standard --fix '{test/**/*,src/**/*.spec.ts}'",
+    "mocha-ts": "node --experimental-modules --es-module-specifier-resolution=node ./build/bin/mocha-ts.cjs ",
+    "mocha-ts:cjs": "node ./build/bin/mocha-ts.cjs --commonjs ",
+    "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
+    "mocha-ts:browser": "node build/testing/browser/index.cjs ",
+    "mocha-ts:browser-headless": "node build/testing/browser/index.cjs headless ",
+    "version": "npm run docs",
+    "test": "echo \"tests should be run manually (pairing with a running wallet is required)\"",
+    "test:browser": "npm run mocha-ts:browser ",
+    "test:browser-headless": "npm run mocha-ts:browser-headless ",
+    "test:node": "run-s test:node-cjs test:node-esm",
+    "test:node-cjs": "npm run mocha-ts:cjs -- {test/tests.ts}",
+    "test:node-esm": "npm run mocha-ts -- {test/tests.ts}",
+    "watch": "npm run mocha-ts:watch "
   },
   "ts-standard": {
+    "project": "tsconfig.json",
     "env": [
       "mocha"
     ],
@@ -61,43 +80,43 @@
       "IS_BROWSER",
       "browser",
       "page",
-      "_pkg",
       "chai"
     ],
-    "project": "./tsconfig.json",
     "ignore": [
       "dist/**/*",
+      "examples/**/*",
       "types/**/*",
-      "build/testing/types/**/*"
+      "benchmark/**/*"
     ]
   },
   "devDependencies": {
     "@i3m/base-wallet": "^1.5.3",
     "@i3m/bok-wallet": "^1.5.3",
-    "@rollup/plugin-commonjs": "^21.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-multi-entry": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@rollup/plugin-replace": "^3.0.0",
-    "@rollup/plugin-typescript": "^8.2.0",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-multi-entry": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^10.0.0",
+    "c8": "^7.12.0",
     "chai": "^4.3.3",
-    "fs-extra": "^10.0.0",
-    "glob": "^7.2.0",
+    "dotenv": "^16.0.3",
+    "fs-extra": "^10.1.0",
+    "glob": "^8.0.1",
     "json5": "^2.2.0",
-    "minimatch": "^3.0.4",
-    "mocha": "^9.1.1",
+    "minimatch": "^5.0.1",
+    "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
     "pirates": "^4.0.1",
-    "puppeteer": "^13.7.0",
+    "puppeteer": "^19.1.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.57.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-standard": "^11.0.0",
     "tslib": "^2.3.1",
-    "typedoc": "^0.22.0",
+    "typedoc": "^0.23.0",
     "typedoc-plugin-markdown": "^3.11.0",
     "typescript": "^4.4.3"
   },
