--- a/packages/wallet-desktop-openapi/src/paths/resources.yaml
+++ b/packages/wallet-desktop-openapi/src/paths/resources.yaml
@@ -98,6 +98,9 @@ components:
           example: VerifiableCredential
           enum:
             - VerifiableCredential
+        name:
+          type: string
+          example: 'Resource name'
         parentResource:
           type: string
         identity:
@@ -169,6 +172,9 @@ components:
           example: Object
           enum:
             - Object
+        name:
+          type: string
+          example: 'Resource name'
         parentResource:
           type: string
         identity:
@@ -190,6 +196,9 @@ components:
           example: Contract
           enum:
             - Contract
+        name:
+          type: string
+          example: 'Resource name'
         parentResource:
           type: string
         identity:
@@ -210,6 +219,9 @@ components:
           example: Contract
           enum:
             - NonRepudiationProof
+        name:
+          type: string
+          example: 'Resource name'
         parentResource:
           type: string
         identity:
