--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -115,6 +115,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@i3m/non-repudiation-library": "^2.2.1",
     "@i3m/wallet-desktop-openapi": "^1.5.3",
     "@veramo/core": "^1.2.0",
     "@veramo/credential-w3c": "^1.2.0",
