--- a/packages/wallet-desktop-openapi/src/schema/identity.yaml
+++ b/packages/wallet-desktop-openapi/src/schema/identity.yaml
@@ -15,7 +15,7 @@ components:
     EthereumAddress:
       title: Ethereum Address
       type: string
-      pattern: '^0x([0-9A-Fa-f]){40}$'
+      pattern: '^(0x)?([0-9A-Fa-f]){40}$'
       example: '0x71C7656EC7ab88b098defB751B7401B5f6d8976F'
 
     did: 
