--- a/packages/wallet-desktop-openapi/src/paths/resources.yaml
+++ b/packages/wallet-desktop-openapi/src/paths/resources.yaml
@@ -191,7 +191,6 @@ components:
       type: object
       properties:
         type:
-          type: string
           $ref:  "#/components/schemas/ResourceType"
           example: Contract
           enum:
@@ -199,12 +198,33 @@ components:
         name:
           type: string
           example: 'Resource name'
-        parentResource:
-          type: string
         identity:
           $ref: "../schema/identity.yaml#/components/schemas/did"
         resource:
-          $ref: "../schema/dataSharingAgreement.yaml#/components/schemas/dataSharingAgreement"
+          type: object
+          properties:
+            dataSharingAgreement:
+              $ref: "../schema/dataSharingAgreement.yaml#/components/schemas/dataSharingAgreement"
+            keyPair:
+              type: object
+              properties:
+                privateJwk:
+                  type: string
+                  description: |
+                    A stringified JWK with alphabetically sorted claims that represents a private key (complementary to `publicJwk`)
+                  example: '{"alg":"ES256","crv":"P-256","d":"rQp_3eZzvXwt1sK7WWsRhVYipqNGblzYDKKaYirlqs0","kty":"EC","x":"sMGSjfIlRJRseMpx3iHhCx4uh-6N4-AUKX18lmoeSD8","y":"Hu8EcpyH2XrCd-oKqm9keEhnMx2v2QaPs6P4Vs8OkpE"}'
+                publicJwk:
+                  type: string
+                  description: |
+                    A stringified JWK with alphabetically sorted claims that represents the public key (complementary to `privateJwk`). It MUST match either `dataSharingAgreement.dataExchangeAgreement.orig` or `dataSharingAgreement.dataExchangeAgreement.dest`
+                  example: '{"alg":"ES256","crv":"P-256","kty":"EC","x":"sMGSjfIlRJRseMpx3iHhCx4uh-6N4-AUKX18lmoeSD8","y":"Hu8EcpyH2XrCd-oKqm9keEhnMx2v2QaPs6P4Vs8OkpE"}'
+              required:
+                - privateJwk
+                - publicJwk
+          required:
+            - dataSharingAgreement
+            - keyPair
+
       required:
         - type
         - resource
