optional schema added to the data sharing agreement

--- a/packages/wallet-desktop-openapi/src/schema/dataSharingAgreement.yaml
+++ b/packages/wallet-desktop-openapi/src/schema/dataSharingAgreement.yaml
@@ -73,6 +73,9 @@ components:
           minimum: 0
           exclusiveMinimum: true
           example: 180000
+        schema:
+          description: "A stringified JSON-LD schema describing the data format" 
+          type: string
 
     DataSharingAgreement:
       type: object
