--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -65,15 +65,16 @@
     "nodemon": "^2.0.7",
     "rollup": "^2.39.1",
     "rollup-plugin-scss": "^3.0.0",
+    "sass": "^1.56.0",
     "ts-node": "^10.9.1",
     "ts-standard": "^10.0.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@i3m/base-wallet": "^2.1.6",
     "@i3m/bok-wallet": "^2.1.6",
     "@i3m/sw-wallet": "^2.1.6",
