--- a/.github/workflows/automatic-release.yml
+++ b/.github/workflows/automatic-release.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [16, 18]
+        node-version: ['16.x', '18.x']
 
     steps:
       - name: Git checkout
@@ -44,7 +44,8 @@ jobs:
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
            
       - name: NPM publish
         run: ./scripts/libraries.sh
@@ -65,7 +66,7 @@ jobs:
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18.x'
       
       - name: Install root dependencies
         run: npm ci
