--- a/.github/workflows/automatic-publication.yml
+++ b/.github/workflows/automatic-publication.yml
@@ -2,9 +2,8 @@ name: build
 
 on:
   push:
-    branches: [ public ]
-    tags-ignore:
-      - "v*.*.*"
+    tags:
+      - 'v*.*.*'
   workflow_dispatch:
 
 jobs:
@@ -30,16 +29,7 @@ jobs:
 
       - name: install
         run: npm ci
-      
-      - name: lint
-        run: npm run lint
-      
-      - name: build
-        run: npm run build:js
-      
-      - name: docs
-        run: npm run docs
-      
+
       - name: node tests
         run: npm run test:node
         env:
@@ -60,18 +50,27 @@ jobs:
 
       - name: install
         run: npm ci
-      
-      - name: lint
-        run: npm run lint
-      
-      - name: build
-        run: npm run build:js
-      
-      - name: docs
-        run: npm run docs
-      
+            
       - name: browser tests
         run: npm run test:browser-headless
         env:
           RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+  
+  npm-publish:
+    needs: [node, browser]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+           
+      - name: NPM publish
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}   
