--- a/.github/workflows/manual-build-and-test.yml
+++ b/.github/workflows/manual-build-and-test.yml
@@ -1,10 +1,6 @@
-name: build
+name: manual build and test (node and browser)
 
 on:
-  push:
-    branches: [ public ]
-    tags-ignore:
-      - "v*.*.*"
   workflow_dispatch:
 
 jobs:
