--- a/.github/workflows/automatic-publication.yml
+++ b/.github/workflows/automatic-publication.yml
@@ -3,7 +3,7 @@ name: build, test (node and browser), publish to NPM
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
   workflow_dispatch:
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         node-version: [16.x, 18.x]
       # When set to true, GitHub cancels all in-progress jobs if any matrix job fails.
       fail-fast: true
@@ -50,13 +50,13 @@ jobs:
 
       - name: install
         run: npm ci
-            
+
       - name: browser tests
         run: npm run test:browser-headless
         env:
           RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-  
+
   npm-publish:
     needs: [node, browser]
     runs-on: ubuntu-latest
@@ -67,10 +67,10 @@ jobs:
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
-           
+          node-version: "18.x"
+          registry-url: "https://registry.npmjs.org"
+
       - name: NPM publish
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}   
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
