resource list can now be filtered by identity or parenResource; also in the wallet-protocol-api

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "node",
       "request": "launch",
       "cwd": "${workspaceFolder}/packages/wallet-desktop",
-      "env": { "DEBUG": "*" },
+      "env": { "DEBUG": "@i3m/*" },
       "runtimeExecutable": "${workspaceFolder}/packages/wallet-desktop/node_modules/.bin/electron",
       "args" : ["./dist/main"],
       "outputCapture": "std"
