we cannot parallelize! Not even browser and node

--- a/.github/workflows/automatic-publication.yml
+++ b/.github/workflows/automatic-publication.yml
@@ -38,6 +38,7 @@ jobs:
 
   browser:
     name: test in browser
+    needs: [node]
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
